Prices fixed and Price CB

--- a/ourStory.html
+++ b/ourStory.html
@@ -117,7 +117,7 @@
       </p>
     </div>
     <div class="aboutUsImage">
-      <img src="image/aboutUs/team.jpg" alt="">
+      <img src="image/aboutUs/groupPhoto.png" alt="">
     </div>
   </div>
 
