--- a/store.html
+++ b/store.html
@@ -85,27 +85,27 @@
         <div id="sizeFilter">
           <h5>Choose your Size</h5>
           <div class="form-check">
-            <input class="checkoption" type="checkbox" id="inlineCheckbox1" disabled>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" disabled>
             <label class="form-check-label" for="inlineCheckbox1">XS</label>
           </div>
           <div class="form-check">
-            <input class="checkoption" type="checkbox" id="small" onclick="small()">
+            <input class="form-check-input" type="checkbox" id="small" onclick="small()">
             <label class="form-check-label" for="inlineCheckbox1">S</label>
           </div>
           <div class="form-check">
-            <input class="checkoption" type="checkbox" id="medium" onclick="medium()">
+            <input class="form-check-input" type="checkbox" id="medium" onclick="medium()">
             <label class="form-check-label" for="inlineCheckbox1">M</label>
           </div>
           <div class="form-check">
-            <input class="checkoption" type="checkbox" id="large" onclick="large()">
+            <input class="form-check-input" type="checkbox" id="large" onclick="large()">
             <label class="form-check-label" for="inlineCheckbox1">L</label>
           </div>
           <div class="form-check">
-            <input class="checkoption" type="checkbox" id="xLarge" onclick="xlarge()">
+            <input class="form-check-input" type="checkbox" id="xLarge" onclick="xlarge()">
             <label class="form-check-label" for="inlineCheckbox1">XL</label>
           </div>
           <div class="form-check">
-            <input class="checkoption" type="checkbox" id="xxLarge" onclick="xxlarge()">
+            <input class="form-check-input" type="checkbox" id="xxLarge" onclick="xxlarge()">
             <label class="form-check-label" for="inlineCheckbox1">XXL</label>
           </div>
         </div>
@@ -113,20 +113,20 @@
         <div id="sizeFilter">
           <h5>Price</h5>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-            <label class="form-check-label" for="inlineCheckbox1">&euro;0 to &euro;10</label>
+            <input class="form-check-input" type="checkbox" id="2030CB" onclick="CB2030()">
+            <label class="form-check-label" for="inlineCheckbox1">&euro;20 to &euro;30</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-            <label class="form-check-label" for="inlineCheckbox1">&euro;10 to &euro;20</label>
+            <input class="form-check-input" type="checkbox" id="3040CB" onclick="CB3040()">
+            <label class="form-check-label" for="inlineCheckbox1">&euro;30 to &euro;40</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-            <label class="form-check-label" for="inlineCheckbox1">&euro;20 to &euro;50</label>
+            <input class="form-check-input" type="checkbox" disabled>
+            <label class="form-check-label" for="inlineCheckbox1">&euro;40 to &euro;50</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-            <label class="form-check-label" for="inlineCheckbox1">&euro;50 to &euro;100</label>
+            <input class="form-check-input" type="checkbox" id="5060CB" onclick="CB5060()">
+            <label class="form-check-label" for="inlineCheckbox1">&euro;50 to &euro;60</label>
           </div>
         </div>
       </div>
@@ -146,7 +146,7 @@
                   <p>XL</p>
                 </div>
                 <div class="prodDetails">
-                  <p>&euro;30</p>
+                  <p>&euro;21.24</p>
                 </div>
             </div>
             </a>
@@ -164,7 +164,7 @@
                 <p>M</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;32</p>
+                <p>&euro;21.24</p>
               </div>
             </div>
             </a>
@@ -182,7 +182,7 @@
                 <p>S</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;30</p>
+                <p>&euro;32.45</p>
               </div>
             </div>
             </a>
@@ -201,7 +201,7 @@
                 <p>L</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;40</p>
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
@@ -219,7 +219,7 @@
                 <p>L</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;45</p>
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
@@ -237,7 +237,7 @@
                 <p>S</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;45</p>
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
@@ -262,7 +262,7 @@
                 <p>2XL</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;50</p>
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
@@ -281,7 +281,7 @@
                 <p>S</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;30</p>
+                <p>&euro;21.24</p>
               </div>
             </div>
           </div>
@@ -296,7 +296,7 @@
                 <p>M</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;35</p>
+                <p>&euro;21.24</p>
               </div>
             </div>
             </a>
@@ -319,7 +319,7 @@
                 <p>S</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;30</p>
+                <p>&euro;32.45</p>
               </div>
             </div>
           </div>
@@ -336,7 +336,7 @@
                 <p>S</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;45</p>
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
@@ -355,7 +355,7 @@
                 <p>S</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;30</p>
+                <p>&euro;21.24</p>
               </div>
             </div>
           </div>
@@ -376,7 +376,7 @@
                 <p>M</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;32</p>
+                <p>&euro;21.24</p>
               </div>
             </div>
             </a>
@@ -395,7 +395,7 @@
                 <p>M</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;35</p>
+                <p>&euro;21.24</p>
               </div>
             </div>
             </a>
@@ -418,7 +418,7 @@
                 <p>L</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;40</p>
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
@@ -436,7 +436,7 @@
                 <p>L</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;45</p>
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
@@ -460,7 +460,7 @@
                   <p>XL</p>
                 </div>
                 <div class="prodDetails">
-                  <p>&euro;30</p>
+                  <p>&euro;21.24</p>
                 </div>
             </div>
             </a>
@@ -482,7 +482,193 @@
                 <p>2XL</p>
               </div>
               <div class="prodDetails">
-                <p>&euro;50</p>
+                <p>&euro;53.10</p>
+              </div>
+            </div>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div id="products2030" style="display: none;">
+        <div class="storeRow">
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <a href="product1.html">
+                <div class="card-body">
+                  <img src="/image/Products/prod1/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+                </div>
+                <div class="prodDetails">
+                  <h5>
+                    Vintage Nike Reworked Cityscape Skyline Split Tee</h5>
+                  <p>XL</p>
+                </div>
+                <div class="prodDetails">
+                  <p>&euro;21.24</p>
+                </div>
+            </div>
+            </a>
+          </div>
+
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product2.html">
+                  <img src="/image/Products/prod2/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>Yellow Tie-dyed Babydoll Crop Top</h5>
+                <p>M</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;21.24</p>
+              </div>
+            </div>
+            </a>
+          </div>
+
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product8.html">
+                  <img src="/image/Products/prod8/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>
+                  Tea Stained Cream Crochet Festival Tank Top</h5>
+                <p>S</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;21.24</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="storeRow">
+
+
+
+          <div class="col-sm-4">
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product6.html">
+                  <img src="/image/Products/prod6/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>Boxy Cream Lace Top w/ Crochet Trim</h5>
+                <p>M</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;21.24</p>
+              </div>
+            </div>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div id="products3040" style="display: none;">
+        <div class="storeRow">
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product3.html">
+                  <img src="/image/Products/prod3/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>Octopus A line t-shirt dress</h5>
+                <p>S</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;32.45</p>
+              </div>
+            </div>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div id="products5060" style="display: none;">
+        <div class="storeRow">
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product4.html">
+                  <img src="/image/Products/prod4/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>Take Me To The Ocean upcycled denim & lace Jacket</h5>
+                <p>L</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;53.10</p>
+              </div>
+            </div>
+            </a>
+          </div>
+
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product5.html">
+                  <img src="/image/Products/prod5/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>Skull & Flowers Frida Kahlo</h5>
+                <p>L</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;53.10</p>
+              </div>
+            </div>
+            </a>
+          </div>
+
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product9.html">
+                  <img src="/image/Products/prod9/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>Money exchange Nike hoodie</h5>
+                <p>S</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;53.10</p>
+              </div>
+            </div>
+            </a>
+          </div>
+
+          <div class="col-sm-4">
+
+
+            </a>
+          </div>
+        </div>
+        <div class="storeRow">
+          <div class="col-sm-4">
+
+            <div class="card" style="border: none">
+              <div class="card-body">
+                <a href="product7.html">
+                  <img src="/image/Products/prod7/1.webp" class="card-img-top" alt="Aerial Image of the Red Tower." />
+              </div>
+              <div class="prodDetails">
+                <h5>Bart Simpson Hoodie</h5>
+                <p>2XL</p>
+              </div>
+              <div class="prodDetails">
+                <p>&euro;53.10</p>
               </div>
             </div>
             </a>
