--- a/ourStory.html
+++ b/ourStory.html
@@ -211,7 +211,7 @@
       <p>+356 21663226</p>
       <a href="https://www.instagram.com/thrifty_threads.mt/" target="_blank"><ion-icon size="large"
           name="logo-instagram"></ion-icon></a>
-      <a href="https://www.facebook.com/TThreadsMT/" target="_blank"><ion-icon size="large"
+      <a href="https://www.facebook.com/thriftyTMT" target="_blank"><ion-icon size="large"
           name="logo-facebook"></ion-icon></a>
       <a href="contactUs.html"><ion-icon size="large" name="mail-outline"></ion-icon></a>
     </div>
